# web-mobile-emulator-testing

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt  run_tests.bat
.claude/: settings.local.json
config/: __init__.py  browser_config.py  device_profiles.py  settings.py
pages/: base_page.py  home_page.py  search_page.py  stream_page.py
reports/: report.html  report_20251120_001458.html
reports/assets/: style.css
tests/: conftest.py  test_load_streaming.py
